<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Practice My Words</string>
    <string name="translationHint">Type the %1$s translation</string>
    <string name="dictionaries">Manage your dictionaries</string>
    <string name="newDictionary">New Dictionary</string>
    <string name="reverseTranslation">Reverse translations</string>
    <string name="reverseTranslationToastMessage">Displaying words in %1$s</string>
    <string name="deleteDictionary">Delete Dictionary</string>
    <string name="startTest">Start practice test</string>
    <string name="account">Account</string>
    <string name="modify">Modify</string>
    <string name="practiceTestSentence">What is the %1$s translation of</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="deleteDictionaryConfirmDialog">Are you sure you want to delete the %1$s dictionary?</string>
    <string name="newLangWord">New %1$s word</string>
    <string name="wordOrder">Word order</string>
    <string name="orderByDate">Order by date</string>
    <string name="orderAlphabetical">Alphabetical order</string>
    <string name="emailAddress">Email address</string>
    <string name="password">Password</string>
    <string name="passwordForgotten">Password Forgotten</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="signin">Sign in</string>
    <string name="login">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="createAccount">Create Account</string>
    <string name="accountAlreadyCreated">Account already created</string>
    <string name="search">Search</string>
    <string name="parameters">Parameters</string>
    <string name="wordNotification">Test your knowledge using notifications</string>
    <string name="preferencesSaved">Preferences saved</string>
    <string name="intervalTimeNotification">Time interval between two notifications (in minutes)</string>
    <string name="periodActivateNotification">At which moment of the day do you want to receive notification ?</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="seconds">seconds</string>
    <string name="second">second</string>
    <string name="and">and</string>
    <string name="copiedToClipboard">Copied to clipboard</string>
    <string name="all">All</string>
    <string name="numberOfWordsPerTest">Number of words per practice test</string>
    <string name="ofCorrectAnswer">Of correct answers</string>
    <string name="createADictionary">Create at least one dictionary to launch the practice test</string>
    <string name="addAtLeastOneWord">Add at least one word to launch the practice test</string>
    <string name="correct">Correct</string>
    <string name="not_correct">Not correct</string>
</resources>
